samples/_failures_safe/1761341769_869c1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_def9f530.c: In function ‘main’:
./samples/SAFE/__tmp_def9f530.c:159:5: error: expected expression at end of input
  159 |     buffer_free(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_def9f530.c:159:5: error: expected declaration or statement at end of input
